--- a/index.html
+++ b/index.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tribute Page</title>
-    <link rel="stylesheet" href="tribute.css">
-</head>
-<body>
-<div id="main">
-    <h1 id="title">Favorite Character</h1>
-    <div id="img-div">
-        <img id="image" src="images/atap.png" alt="">
+    <link rel="stylesheet" href="tribute.css" />
+  </head>
+  <body>
+    <div id="main">
+      <h1 id="title">Favorite Character</h1>
+      <div id="img-div">
+        <img id="image" src="images/atap.png" alt="" />
         <nav id="img-caption">
-            <h3>AtapRumah</h3>
+          <h3>AtapRumah</h3>
         </nav>
+      </div>
+      <div>
+        <p id="tribute-info">
+          A character's nick on any game that played by hendra. It was found on
+          2020 when he saw that kind of name appear on WWP's game. After that he
+          took the name for himself, and named on all of the game's character he
+          was played. As expected, the name is so unique and become trademark
+          for the player. the reason why he keeps using that name is because it
+          takes time for him to find a suitable name for a nickname in the game.
+          So if you find me on any game you played, please greet me. Thanks. For
+          more info about this character, check out his
+          <a id="tribute-link" href="ataprumah.co.id" target="_blank"
+            >ataprumah.co.id</a
+          >
+          page
+        </p>
+      </div>
+      <footer>footer</footer>
     </div>
-    <div>
-        <p id="tribute-info">A character's nick on any game that played by hendra. It was found on 2020 when he saw that kind of name appear on WWP's game. After that he took the name for himself, and named on all of the game's character he was played. As expected, the name is so unique and become trademark for the player. the reason why he keeps using that name is because it takes time for him to find a suitable name for a nickname in the game. So if you find me on any game you played, please greet me. Thanks. For more info about this character, check out his <a id="tribute-link" href="ataprumah.co.id" target="_blank">ataprumah.co.id</a> page</p>
-    </div>
-</div>
-</body>
+  </body>
 </html>
